calico-policies/private-network-isolation/eu-es/allow-private-services.yaml
# This policy allows outgoing network traffic from worker nodes to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: EU Central registry subnets
      - 166.9.248.76/32
      - 166.9.248.105/32
      - 166.9.248.136/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: eu-de
      # The eu-de IPs were put here to support services in the eu-es region which were available before Monitoring was deployed to eu-es
      # The eu-de IPs should be removed from the eu-es policies eventually
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.28.71/32
      - 166.9.30.53/32
      - 166.9.32.51/32
      # IBM Cloud Monitoring ingest: eu-es
      - 166.9.94.31/32
      - 166.9.95.31/32
      - 166.9.96.31/32
      - 166.9.226.56/32
      - 166.9.227.143/32
      - 166.9.225.35/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: eu-es
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.226.17/32
      - 166.9.227.16/32
      - 166.9.225.16/32
      - 166.9.226.56/32
      - 166.9.227.143/32
      - 166.9.225.35/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: eu-de
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.28.2/32
      - 166.9.28.3/32
      - 166.9.30.231/32
      - 166.9.30.238/32
      - 166.9.32.21/32
      - 166.9.32.7/32
      # New IP addresses added on 1/20/2023
      - 166.9.30.45/32 
      - 166.9.28.159/32 
      - 166.9.32.117/32
      # IPs for eu-es
      - 166.9.94.33/32
      - 166.9.95.35/32
      - 166.9.96.34/32
      # New IP addresses added on 10/19/2023
      - 166.9.225.13/32
      - 166.9.226.14/32
      - 166.9.227.13/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU DE nets
      - 166.9.28.5/32
      - 166.9.32.23/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU DE nets
      - 166.9.28.7/32
      - 166.9.32.24/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
