calico-policies/private-network-isolation/eu-es/allow-sys-mgmt-private.yaml
# This policy allows connections for specific IBM Cloud infrastructure
# (SoftLayer) systems that are used to manage the worker nodes.
# Note that you must include the nets for dal01, dal10, and wdc04.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-sys-mgmt-private
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Required net for clusters in Europe: ams01
      - 10.2.64.0/20
      # Nets for EU Central zones
      - 10.3.128.0/20 # ams03
      - 10.3.80.0/20 # fra02
      - 10.201.112.0/20 # fra04
      - 10.201.128.0/20 # fra05
      - 10.3.144.0/20 # mil01
      - 10.2.144.0/20 # par01
      - 10.200.96.0/20 # osl01
    source: {}
  ingress:
  - action: Allow
    destination: {}
    source:
      nets:
      # Required nets for all clusters: dal01, dal10, wdc04
      - 10.0.64.0/19
      - 10.200.80.0/20
      - 10.3.160.0/20
      - 10.201.0.0/20
      # Required net for clusters in Europe: ams01
      - 10.2.64.0/20
      # Nets for EU Central zones
      - 10.3.128.0/20 # ams03
      - 10.3.80.0/20 # fra02
      - 10.201.112.0/20 # fra04
      - 10.201.128.0/20 # fra05
      - 10.3.144.0/20 # mil01
      - 10.2.144.0/20 # par01
      - 10.200.96.0/20 # osl01
  order: 1800
  selector: ibm.role == 'worker_private'
  types:
  - Egress
  - Ingress
